force-app/main/default/objects/Assessment_Response__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Assessment Responses</relationshipLabel>
    <relationshipName>Assessment_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>