force-app/main/default/objects/Assessment_Response__c/fields/Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assessment Question</label>
    <referenceTo>Assessment_Question__c</referenceTo>
    <relationshipLabel>Assessment Responses</relationshipLabel>
    <relationshipName>Assessment_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>