force-app/main/default/objects/Assessment_Response__c/fields/Respondee__c.field-meta.xml
<CustomField>
    <fullName>Respondee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Respondee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessment Responses</relationshipLabel>
    <relationshipName>Assessment_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>